--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
             <span id="result">
                 </span>
         </div>
+        <footer>
 
-        <p>&copy; Everyone Can Get Rich</p>
+            &#169; This Calculator belongs to --Surendhar Das --
 
+            <footer>
+
+        
 
 
     </div>
